--- a/gb/23/9/21/n14078156.md
+++ b/gb/23/9/21/n14078156.md
@@ -1,70 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>国际买家比例回升 专家预测加州2024房市走势</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>国际买家回笼 专家看好2024加州房市</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14078160-GettyImages-1649401380-600x400.jpg" />
-<h6>2023年9月6日，加州圣玛利诺市一处待售房屋。(FREDERIC J. BROWN/AFP via Getty Images) 
+<h6>2023年9月6日，加州圣玛利诺市一处待售房屋。(Frederic J. Brown/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年09月21日讯】（大纪元记者姜琳达洛杉矶报导）无论是“刚需”还是投资，加州房地产向来备受欢迎。经过一年的起起伏伏，专家预测：加州2024年的住房市场将出现反弹，预计中位数房价将上涨6.2%，销量呈持续增长趋势。</p>
+	<p>【大纪元2023年09月21日讯】（大纪元记者姜琳达洛杉矶报导）无论是“刚需”还是投资，加州房地产向来倍受欢迎。经过一年的起起伏伏，专家预测：加州2024年的住房市场将出现反弹，预计中位数房价将上涨6.2%，销量呈持续增长趋势。</p>
 <p>加州房地产经纪人协会（CAR）于周三（20日）发布的最新报告中预计，2024年经济增长放缓、通胀降温，这些因素将降低<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%B5%E6%8A%BC%E8%B4%B7%E6%AC%BE%E5%88%A9%E7%8E%87.md#1">抵押贷款利率</a>，从而促成一个更有利的市场环境，刺激明年加州的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%B1%8B%E9%94%80%E5%94%AE.md#1">房屋销售</a>。</p>
-<h2>预计2024年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7%E4%B8%8A%E6%B6%A8.md#1">房价上涨</a></h2>
+<h2>加州中位房价或逾86万</h2>
 <p>与2023年“房价预计下跌8.8%”情况截然相反的是，CAR预计2024年加州中位数房价将上涨6.2%，达到860,300美元。而在2023年的中位数房价，预计只会维持在81万美元。持续的住房短缺和竞争激烈的住房市场，将在明年继续促成<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7%E4%B8%8A%E6%B6%A8.md#1">房价上涨</a>的压力。</p>
 <p>CAR总裁珍妮弗?布兰奇尼（Jennifer Branchini）表示，过去几年因竞争激烈被挤出市场的首次购房者，在明年将有所行动，“更有利的市场环境和更低的借贷成本，加上<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BE%85%E5%94%AE%E6%88%BF%E5%B1%8B.md#1">待售房屋</a>的增加，将激励买家和卖家明年重新进入市场”。</p>
 <p>因此，CAR预计明年的现有单户住宅销售将增长22.9%，达到327,100套的总销量，远高于2023年的预计销售数字。</p>
-<h2>国际买家比例回升</h2>
+<h2>国际买家助销量增加</h2>
 <p>在周三下午的视频会议中，CAR高级副总裁兼首席经济学家乔丹?列文（Jordan Levine）指出，从整体上看，房市的复苏略显缓慢，但各地仍有很多住房需求，加上加州外国人买房比例正在回升，“这也是为什么我们预测2024年的销量将增加”。</p>
 <p>他表示，高收入的投资者和国际买家都在增加，尤其在疫情之后，国际买家开始反弹。</p>
-<h2>专家预测明年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E8%B4%B7%E5%88%A9%E7%8E%87.md#1">房贷利率</a>下降</h2>
-<p>9月份，美国的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%B5%E6%8A%BC%E8%B4%B7%E6%AC%BE%E5%88%A9%E7%8E%87.md#1">抵押贷款利率</a>再次升至7%以上，削弱了潜在买家的需求。不过这一情况预计在2024年发生改变。</p>
+<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E8%B4%B7%E5%88%A9%E7%8E%87.md#1">房贷利率</a>或降至6%</h2>
+<p>9月份，美国的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%B5%E6%8A%BC%E8%B4%B7%E6%AC%BE%E5%88%A9%E7%8E%87.md#1">抵押贷款利率</a>再次升至7%以上，削弱了潜在买家需求。不过这一情况预计在2024年发生改变。</p>
 <p>CAR经济学家预测，通胀将在未来18个月内继续逐步下降，2024年的消费者物价指数（CPI）将降至2.6%。因此，平均30年固定抵押贷款利率有望从2023年的6.7%下降至2024年的6%，虽然平均利率预计仍远高于疫情前，但将低于近10年的长期平均水平。</p>
 <p>列文说：“预计2024年经济将疲软，美联储将于明年开始放松货币政策。2024年抵押贷款利率将呈下降趋势。到明年年底，平均30年期固定利率抵押贷款可能会达到5%左右的范围。”</p>
 <p>布兰奇尼补充说：“由于明年的抵押贷款利率有望下降，2024年的加州房市对买家和卖家来说都将是更好的一年。”</p>
-<h2>库存将依然短缺</h2>
+<h2>库存依然短缺</h2>
 <p>加州的房市一方面非常抢手，另一方面始终存在库存短缺、供不应求的致命瓶颈。</p>
 <p>专家表示，尽管随着市场状况和贷款环境持续改善，2024年的预计活跃房源数量将增加10%甚至20%，但房屋供应仍将低于正常水准。</p>
-<p>库存短缺也成为推动房价上涨的主因之一。列文指出，明年贷款利率一旦下降，买家将有更大的财务灵活性以更高的价格购买房屋，“这可能会增加住房需求，并导致房价出现更大的上涨压力”。◇</p>
-<p>责任编辑：嘉莲</p>
+<p>库存短缺也成为推动<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7%E4%B8%8A%E6%B6%A8.md#1">房价上涨</a>的主因之一。列文指出，明年贷款利率一旦下降，买家将有更大的财务灵活性以更高的价格购买房屋，“这可能会增加住房需求，并导致房价出现更大的上涨压力”。◇</p>
+<p>责任编辑：嘉莲#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979402.md#1">美国南加房价涨势明显 房市再现抢购潮</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/6/n13989380.md#1">金融市场动荡 南加房市依旧升温</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14043970.md#1">美国热门购房目的地 拉斯维加斯跃居榜首</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045438.md#1">洛杉矶县房产估值近2万亿美元 连增13年</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/27/n3973738.md#1" target="_blank">净仁：通向人类生命的真正幸福</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062287.md#1">【古道人生】两人为躲债藏山洞 结果都把债还了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074103.md#1">【未解之谜】“雷暴哮喘” 《推背图》中的秘密？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073883.md#1">医院放弃治疗 植物人神奇被唤醒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075338.md#1">女子濒死见到已故亲人 上帝要她带话回人间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076236.md#1">【未解之谜】《推背图》46象 即将应验的预言？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076769.md#1">【中国禁闻】惧朝俄关系升温? 王毅匆忙访俄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14078054.md#1">【菁英论坛】中共无牌可打 对美示弱不可避免</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071662.md#1">【思想领袖】为孩子的成长负责 抵制觉醒主义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076744.md#1">【中国观察】李尚福到底因何激怒习近平？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076307.md#1">分析：习政权命悬一线 王毅会沙利文求和？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076537.md#1">沈舟：山东号政治性演训 美军看笑话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075690.md#1">李易峰因嫖娼遭封杀一年 疑似复出直播遭举报</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076481.md#1">与日武打女星武田梨奈聚会 洪金宝暴瘦照曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075660.md#1">袁冰妍被点名偷漏税 微博遭禁 电视台急切割</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077071.md#1">儿时曾反串饰演男孩 徐娇官宣回归周星驰公司</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077157.md#1">惊闻周杰伦天津开唱出意外 昆凌曝曾火速探视</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076055.md#1">医生提出警告 不要和小狗同床而睡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073756.md#1">研究：高脂肪早餐可提升晚期肺癌药疗效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065005.md#1">拯救视力勿乱点药水 中医教你1分钟养眼 效果最佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072643.md#1">补错得肾结石？医师告诉你钙镁、维生素D补充比例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076688.md#1">专家说 你这样拿笔电就错了</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/21/n14078156.htm">国际买家比例回升 专家预测加州2024房市走势</a></p><hr>
-
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/21/n14078156.htm">国际买家回笼 专家看好2024加州房市</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078156.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
